...
        verticalArrangement = Arrangement.spacedBy(18.dp),
    ) {
        item {
            ScreenHeader(
                title = "Настройки",
                modifier = Modifier.semantics {
                    contentDescription = "Заголовок экрана Настройки"
                },
            )
        }

        if (uiState.loadState == SettingsLoadState.LOADING) {
            item {
...
